--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "next": "^15.1.6",
     "radix-ui": "^1.4.3",
